unpackaged/main/default/objects/Xero_Log_Activity__c/Xero_Log_Activity__c.object-meta.xml
<CustomObject>
    <label>Xero Log Activity</label>
    <nameField>
        <displayFormat>XLA-{0000}</displayFormat>
        <label>Xero Log Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xero Log Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>