unpackaged/main/default/objects/Xero_Log_Activity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Xero Log Activities</relationshipLabel>
    <relationshipName>Xero_Log_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>