unpackaged/main/default/objects/Xero_Log_Activity__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>