unpackaged/main/default/objects/Xero_Log_Activity__c/fields/JSON_Request__c.field-meta.xml
<CustomField>
    <fullName>JSON_Request__c</fullName>
    <label>JSON/Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>