unpackaged/main/default/objects/Xero_Log_Activity__c/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <formula>IF(NOT(ISBLANK( Account__c )), Account__r.Name , IF(NOT(ISBLANK( Xero_Invoice__c )), Xero_Invoice__r.Name, &#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Name</label>
    <type>Text</type>
</CustomField>