unpackaged/main/default/objects/Xero_Log_Activity__c/fields/Xero_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Xero_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Xero Invoice</label>
    <referenceTo>Xero_Invoice__c</referenceTo>
    <relationshipLabel>Xero Log Activities</relationshipLabel>
    <relationshipName>Xero_Log_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>