unpackaged/main/default/objects/Xero_Log_Activity__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Code__c</columns>
    <columns>Xero_Invoice__c</columns>
    <columns>Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>