unpackaged/main/default/objects/Xero_Log_Activity__c/listViews/All_Errors.listView-meta.xml
<ListView>
    <fullName>All_Errors</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Code__c</columns>
    <columns>Outcome__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Outcome__c</field>
        <operation>contains</operation>
        <value>Error</value>
    </filters>
    <label>All Errors</label>
</ListView>