unpackaged/main/default/objects/Xero_Log_Activity__c/listViews/Zoey_Errors.listView-meta.xml
<ListView>
    <fullName>Zoey_Errors</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>Error_Code__c</columns>
    <columns>Action__c</columns>
    <columns>Outcome__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Outcome__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Zoey</value>
    </filters>
    <label>Zoey Errors</label>
</ListView>